syntax = "proto3";

package user;


service UserService {
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (GetProfileResponse);
  rpc DeleteProfile (DeleteProfileRequest) returns (DeleteProfileResponse);
}

// Request to create a profile
message CreateProfileRequest {
  int32 userId      = 1;
  string email      = 2;
  string role       = 3;  // "RIDER" | "DRIVER" | "ADMIN"
  string firstName  = 4;
  string lastName   = 5;
  string profilePhoto = 6;
  string bio        = 7;
  string address    = 8;
  string mobileNumber = 9;
  string drivingLicense = 10; 
}


// Response to create a profile
message CreateProfileResponse {
  bool success    = 1;
  string message  = 2;
  int32 profileId = 3;
}
// Request to get a profile
message GetProfileRequest {
  int32 userId = 1;   
  string role  = 2; 

}

// Response to get a profile
// Get profile response
message GetProfileResponse {
  int32 profileId   = 1;
  int32 userId      = 2;
  string email      = 3;
  string firstName  = 4;
  string lastName   = 5;
  string profilePhoto = 6;
  string bio        = 7;
  string address    = 8;
  string role       = 9;
  string mobileNumber = 10;
  string drivingLicense = 11; 
}
// Request for updating profile
message UpdateProfileRequest {
  int32 userId = 1;
  string role = 2;
  string firstName = 3;
  string lastName = 4;
  string profilePhoto = 5;
  string bio = 6;
  string address = 7;
  string mobileNumber = 8;
}


// Request for deleting profile
message DeleteProfileRequest {
  int32 userId = 1;
  string role = 2;
}

// Response for delete
message DeleteProfileResponse {
  bool success = 1;
  string message = 2;
}